--- a/src/app/header/user-icon/user-icon.component.html
+++ b/src/app/header/user-icon/user-icon.component.html
@@ -1,1 +1,11 @@
-<p>user-icon works!</p>
+<div class="user-login">
+  <p class="user-login__name">your name</p>
+  <button
+    mat-raised-button
+    appBtnStyle
+    bgColor="#2F80ED"
+    class="user-login__button"
+  >
+    <mat-icon>account_circle</mat-icon>
+  </button>
+</div>
