--- a/src/app/header/search/search.component.html
+++ b/src/app/header/search/search.component.html
@@ -22,6 +22,7 @@
     appBtnStyle
     [bgColor]="'#2F80ED'"
     class="search__settings-btn"
+    (click)="changeSortHidden()"
   >
     <mat-icon class="search__settings-btn-icon">tune</mat-icon>
   </button>
