--- a/src/app/header/pre-header/pre-header.component.html
+++ b/src/app/header/pre-header/pre-header.component.html
@@ -1,1 +1,27 @@
-<p>pre-header works!</p>
+<mat-toolbar class="pre-header">
+  <ul class="pre-header__list">
+    <li class="pre-header__list-item">
+      <p>Sorting by:</p>
+    </li>
+    <li class="pre-header__list-item" *ngFor="let name of sortingList">
+      <p
+        class="pre-header__text"
+        [ngStyle]="{
+          'text-decoration': choice === name ? 'none' : 'underline'
+        }"
+        (click)="changeChoice(name)"
+      >
+        {{ name }}
+      </p>
+    </li>
+    <li class="pre-header__list-item">
+      <input
+        type="text"
+        class="pre-header__input"
+        [disabled]="choice !== 'by word or sentance'"
+        placeholder="Word or sentance"
+        [value]="choice"
+      />
+    </li>
+  </ul>
+</mat-toolbar>
