--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,1 +1,3 @@
-<p>main-page works!</p>
+<section class="main-page">
+  <app-card *ngFor="let item of response.items" [itemData]="item"></app-card>
+</section>
