feat: add video card

--- a/src/app/main-page/card/card.component.html
+++ b/src/app/main-page/card/card.component.html
@@ -22,6 +22,7 @@
       appBtnStyle
       [bgColor]="'#2F80ED'"
       class="video-card__button"
+      (click)="selectItem()"
     >
       more...
     </button>
