--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,3 +1,14 @@
 <section class="main-page">
-  <app-card *ngFor="let item of response.items" [itemData]="item"></app-card>
+  <div class="main-page__cards" *ngIf="!videoItem">
+    <app-card
+    *ngFor="let item of response.items"
+      [itemData]="item"
+      (selectedData)="videoItem = $event"
+    ></app-card>
+  </div>
+  <app-video-card
+    *ngIf="videoItem"
+    [itemData]="videoItem"
+    (itemDataChanged)="videoItem = $event"
+  ></app-video-card>
 </section>
