--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,9 @@
 <mat-toolbar class="header">
   <app-logo></app-logo>
-  <app-search
+  <app-search></app-search>
+  <app-settings-button
     [isSortBlockHidden]="isFilterBlockHidden"
     (sortHiddenChanged)="changeFilterBlockhidden($event)"
-  ></app-search>
+  ></app-settings-button>
   <app-login-information></app-login-information>
 </mat-toolbar>
