feat: add filtering pipe

--- a/src/app/filtering-block/word-input/word-input.component.html
+++ b/src/app/filtering-block/word-input/word-input.component.html
@@ -3,4 +3,5 @@
   class="input"
   [disabled]="choice !== 'by word or sentance'"
   placeholder="Word or sentance"
+  (input)="changeFilteringString($event)"
 />
