--- a/src/app/header/search/search.component.html
+++ b/src/app/header/search/search.component.html
@@ -10,6 +10,7 @@
       appBtnStyle
       [bgColor]="'#2F80ED'"
       class="search__button"
+      (click)="fetchResponseResults()"
     >
       search
     </button>
