--- a/src/app/filtering-block/word-input/word-input.component.scss
+++ b/src/app/filtering-block/word-input/word-input.component.scss
@@ -1,11 +1,16 @@
-.input {
+.input-container {
+  line-height: 0;
+
+  &__input {
     height: 14px;
     background: white;
     border: none;
     outline: none;
     transition: 0.3s;
+    line-height: 0;
 
     &:focus {
-        box-shadow: 0 0 4px 1px gray;
+      box-shadow: 0 0 4px 1px gray;
     }
+  }
 }
