refactor: change structure of the project

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -7,3 +7,4 @@
   ></app-settings-button>
   <app-login-information></app-login-information>
 </mat-toolbar>
+<app-filtering-block *ngIf="!isFilterBlockHidden"></app-filtering-block>
