--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,4 @@
-<app-header
-  [isFilterBlockHidden]="isFilteringBlockHidden"
-  (isFilterHiddenChanged)="isFilteringBlockHidden = $event"
-></app-header>
-<app-filtering-block *ngIf="!isFilteringBlockHidden"></app-filtering-block>
+<app-header></app-header>
 <main>
-  <app-main-page></app-main-page>
+  <router-outlet></router-outlet>
 </main>
