--- a/src/app/youtube/components/main-page/main-page.component.html
+++ b/src/app/youtube/components/main-page/main-page.component.html
@@ -6,9 +6,9 @@
       (selectedData)="videoItem = $event"
     ></app-card>
   </div>
-  <app-video-card
+  <!-- <app-video-card
     *ngIf="videoItem"
     [itemData]="videoItem"
     (itemDataChanged)="videoItem = $event"
-  ></app-video-card>
+  ></app-video-card> -->
 </section>
