feat: add 404 and detailed info pages

--- a/src/app/core/components/header/logo/logo.component.html
+++ b/src/app/core/components/header/logo/logo.component.html
@@ -1,3 +1,3 @@
-<a class="logo" routerLink="/">
-    <img src="../../assets/svg/youtube.svg" alt="" />
+<a class="logo" [routerLink]="['/']">
+  <img src="../../assets/svg/youtube.svg" alt="logo" />
 </a>
