--- a/src/app/youtube/components/detailed-info-page/video-card.component.scss
+++ b/src/app/youtube/components/detailed-info-page/video-card.component.scss
@@ -1,3 +1,10 @@
+.full-card-section {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
 .full-card {
     padding: 0;
     width: 100vw;
