--- a/src/app/youtube/components/main-page/card/card.component.html
+++ b/src/app/youtube/components/main-page/card/card.component.html
@@ -22,6 +22,7 @@
       appBtnStyle
       [bgColor]="'#2F80ED'"
       class="video-card__button"
+      [routerLink]="['video', this.itemData?.id]"
       (click)="selectItem()"
     >
       more...
