--- a/src/app/youtube/components/main-page/main-page.component.html
+++ b/src/app/youtube/components/main-page/main-page.component.html
@@ -1,14 +1,8 @@
 <section class="main-page">
-  <div class="main-page__cards" *ngIf="!videoItem && videoItems">
+  <div class="main-page__cards" *ngIf="videoItems">
     <app-card
     *ngFor="let item of (videoItems | resultFilter: filterString)"
       [itemData]="item"
-      (selectedData)="videoItem = $event"
     ></app-card>
   </div>
-  <!-- <app-video-card
-    *ngIf="videoItem"
-    [itemData]="videoItem"
-    (itemDataChanged)="videoItem = $event"
-  ></app-video-card> -->
 </section>
