--- a/src/app/core/components/header/search/search.component.html
+++ b/src/app/core/components/header/search/search.component.html
@@ -10,6 +10,7 @@
       appBtnStyle
       [bgColor]="'#2F80ED'"
       class="search__button"
+      routerLink="result"
       (click)="fetchResponseResults()"
     >
       search
