--- a/src/app/core/components/header/login-information/login-information.component.html
+++ b/src/app/core/components/header/login-information/login-information.component.html
@@ -1,11 +1,42 @@
 <div class="user-login">
-  <p class="user-login__name">your name</p>
-  <button
-    mat-raised-button
-    appBtnStyle
-    bgColor="#2F80ED"
-    class="user-login__button"
-  >
-    <mat-icon>account_circle</mat-icon>
-  </button>
+  <ng-container *ngIf="isUserAuth">
+    <p class="user-login__name">{{ name }}</p>
+    <button
+      mat-raised-button
+      appBtnStyle
+      bgColor="#2F80ED"
+      class="user-login__button"
+    >
+      <mat-icon>account_circle</mat-icon>
+    </button>
+    <button
+      mat-button
+      color="warn"
+      class="user-login__login-btn"
+      (click)="logout()"
+    >
+      logout
+    </button>
+  </ng-container>
+  <ng-container *ngIf="!isUserAuth">
+    <button
+      mat-raised-button
+      appBtnStyle
+      bgColor="#2F80ED"
+      class="user-login__login-btn"
+      routerLink="auth/login"
+    >
+      login
+    </button>
+    <button
+      mat-stroked-button
+      appBtnStyle
+      bgColor="white"
+      textColor="#828282"
+      class="user-login__login-btn"
+      routerLink="auth/registration"
+    >
+      registration
+    </button>
+  </ng-container>
 </div>
