--- a/src/app/core/components/header/login-information/login-information.component.scss
+++ b/src/app/core/components/header/login-information/login-information.component.scss
@@ -5,7 +5,8 @@
     justify-content: center;
     top: 28px;
     height: 24px;
-    right: 156px;
+    right: 0;
+    margin-right: 156px;
 
     &__name {
         text-transform: capitalize;
@@ -16,6 +17,14 @@
         height: 24px;
         line-height: 0;
         padding: 0;
+        margin-left: 10px;
+    }
+
+    &__login-btn {
+        min-width: 24px;
+        height: 24px;
+        line-height: 0;
+        text-transform: capitalize;
         margin-left: 10px;
     }
 }
