--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,3 +23,14 @@ pre {
   align-items: center;
   color: #4f4f4f;
 }
+
+button {
+  color: white;
+}
+
+.mat-flat-button,
+.mat-raised-button,
+.mat-fab,
+.mat-mini-fab {
+  color: white;
+}
