feat: add auth guard and reg component

--- a/src/app/auth/components/login/login.component.scss
+++ b/src/app/auth/components/login/login.component.scss
@@ -20,6 +20,12 @@
   right: 0;
   margin: auto;
 
+  @media (max-height: 540px) {
+    position: relative;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
   &__title {
     width: 100%;
     text-align: left;
