--- a/src/app/core/components/header/login-information/login-information.component.html
+++ b/src/app/core/components/header/login-information/login-information.component.html
@@ -33,7 +33,7 @@
       appBtnStyle
       bgColor="white"
       textColor="#828282"
-      class="user-login__login-btn"
+      class="user-login__login-btn media-btn"
       routerLink="auth/registration"
     >
       registration
