--- a/src/app/core/components/filtering-block/filtering-block.component.scss
+++ b/src/app/core/components/filtering-block/filtering-block.component.scss
@@ -7,6 +7,11 @@
         display: flex;
         justify-content: center;
         flex-direction: row;
+        min-width: 0;
+        overflow-x: auto;
+        @media (max-width: 640px) {
+            justify-content: start;
+        }
     }
 
     &__list-item {
@@ -16,6 +21,7 @@
         margin: 0 10.5px;
         user-select: none; 
         cursor: pointer;
+
     }
 
     &__mat-icon {
