--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -12,6 +12,11 @@
     @media (max-width: 960px) {
         justify-content: left;
     }
+    @media (max-width: 640px) {
+        justify-content: center;
+        flex-wrap: wrap;
+        height: 120px;
+    }
 }
 
 .header__list {
