--- a/src/app/core/components/header/login-information/login-information.component.scss
+++ b/src/app/core/components/header/login-information/login-information.component.scss
@@ -7,12 +7,20 @@
   height: 24px;
   right: 0;
   margin-right: 156px;
+
   @media (max-width: 1440px) {
     margin-right: 30px;
   }
 
+  @media (max-width: 640px) {
+    position: relative;
+    top: 0;
+    margin-right: 0;
+  }
+
   &__name {
     text-transform: capitalize;
+
     @media (max-width: 960px) {
       display: none;
     }
@@ -32,6 +40,7 @@
     line-height: 0;
     text-transform: capitalize;
     margin-left: 10px;
+
     @media (max-width: 1440px) {
       margin-left: 5px;
     }
