--- a/src/app/core/components/header/search/search.component.scss
+++ b/src/app/core/components/header/search/search.component.scss
@@ -13,6 +13,14 @@
         min-width: 360px;
     }
 
+    @media (max-width: 640px) {
+        min-width: 280px;
+    }
+
+    @media (max-width: 320px) {
+        order: 4;
+        min-width: 210px;
+    }
     &__block {
         @include flex;
         width: 100%;
@@ -27,7 +35,15 @@
             color: #929292;
             transition: 0.3s;
 
+            @media (max-width: 640px) {
+                width: 40%;
+                &::placeholder {
+                    font-size: 10px;
+                }
+            }
+
             &:focus {
+                width: 90%;
                 outline: none;
                 box-shadow: 0 0 4px 1px gray;
             }
