--- a/src/app/youtube/components/main-page/card/card.component.scss
+++ b/src/app/youtube/components/main-page/card/card.component.scss
@@ -6,8 +6,13 @@
     background-color: #e5e5e5;
     box-sizing: border-box;
     box-shadow: 2px 2px 4px #00000040;
-    // border-bottom: 5px solid #2f80ed;
 
+    @media (max-width: 310px) {
+        justify-content: center;
+        flex-wrap: wrap;
+        padding: 10px;
+        margin: 5px;
+    }
     #cardImage {
         width: 223px;
         margin: 0 auto;
