--- a/src/app/youtube/components/detailed-info-page/video-card.component.scss
+++ b/src/app/youtube/components/detailed-info-page/video-card.component.scss
@@ -29,9 +29,13 @@
         width: 100%;
         max-width: 730px;
         height: 100%;
-        object-fit: fill;
         border-radius: 0 0 0 5px;
         box-shadow: 5px 10px 10px #2f80ed40;
+        img {
+        width:100%;
+        height:100%;
+
+        }
         @media (max-width: 1440px) {
             max-width: 100%;
             max-height: 550px;
@@ -70,6 +74,12 @@
             font-size: 24px;
             font-weight: 700;
             line-height: 1;
+            max-height: 120px;
+            min-height: 0;
+            overflow-y:auto;
+            @media (max-width: 1440px) {
+                font-size: 18px;
+            }
         }
 
         &__date {
@@ -114,6 +124,9 @@
                 overflow-y: auto;
                 @media (max-width: 1440px) {
                     max-height: 320px;
+                }
+                @media (max-width: 360px) {
+                    max-height: 300px;
                 }
             }
         }
