--- a/src/app/youtube/components/main-page/card/card.component.html
+++ b/src/app/youtube/components/main-page/card/card.component.html
@@ -22,7 +22,7 @@
       appBtnStyle
       [bgColor]="'#2F80ED'"
       class="video-card__button"
-      [routerLink]="['/video', this.itemData?.id]"
+      [routerLink]="['/video', this.itemData?.id?.videoId]"
     >
       more...
     </button>
