--- a/src/app/auth/components/login/login.component.scss
+++ b/src/app/auth/components/login/login.component.scss
@@ -8,7 +8,7 @@
 
   max-width: 344px;
   width: 100vw;
-  max-height: 248px;
+  max-height: 258px;
   padding: 10px;
   border-radius: 5px;
   box-shadow: 0 0 4px gray;
@@ -59,6 +59,7 @@
 
   &__form-field {
     width: 100%;
+    margin-top: 5px;
     border-radius: 5px;
   }
 }
