--- a/src/app/youtube/components/create-card-form/create-card-form.component.scss
+++ b/src/app/youtube/components/create-card-form/create-card-form.component.scss
@@ -20,7 +20,7 @@
     right: 0;
     margin: auto;
   
-    @media (max-height: 640px) {
+    @media (max-height: 800px) {
         position: relative;
         margin-top: 20px;
         margin-bottom: 20px;
@@ -40,7 +40,11 @@
       justify-content: right;
       width: 100%;
     }
-  
+
+    &__from-textarea {
+        max-height: 80px;
+    }
+
     &__btn {
       text-transform: capitalize;
       height: 30px;
@@ -60,6 +64,7 @@
     &__form-field {
       width: 100%;
       border-radius: 5px;
+      margin-top: 5px;
     }
   }
   
