--- a/src/app/youtube/components/main-page/main-page.component.html
+++ b/src/app/youtube/components/main-page/main-page.component.html
@@ -5,4 +5,8 @@
       [itemData]="item"
     ></app-card>
   </div>
+  <div class="main-page__cards" >
+    <app-custom-card *ngFor="let item of (cards | async)" [card]="item">
+    </app-custom-card>
+  </div>
 </section>
